--- a/source/repos/WebAppTestData/WebAppTestData/wwwroot/css/site.css
+++ b/source/repos/WebAppTestData/WebAppTestData/wwwroot/css/site.css
@@ -20,3 +20,29 @@ html {
 body {
   margin-bottom: 60px;
 }
+
+.btn
+{
+  margin: 1rem;
+  margin-left: 0rem;
+}
+
+.navbar-nav
+{
+  width: 100%;
+}
+
+.link
+{
+  color: #1B3698FF !important;
+}
+
+.link:hover
+{
+  color: rgba(27, 54, 152, 0.8) !important;
+}
+
+li:last-child
+{
+  margin-left: auto;
+}
