--- a/source/repos/WebAppTestData/WebAppTestData/Views/Account/Login.cshtml
+++ b/source/repos/WebAppTestData/WebAppTestData/Views/Account/Login.cshtml
@@ -20,5 +20,6 @@
         @* <input asp-for="Password" class="form-control"/> *@
         <input class="form-control"/>
     </div>
-    <button type="submit" class="btn btn-outline-success">Войти</button>
+    <button type="submit" class="btn btn-outline-success sign_in" onclick="signIn" asp-controller="Home" asp-action="Index">Войти</button>
 </form>
+<script src="js/site.js"></script>
