--- a/source/repos/WebAppTestData/WebAppTestData/Views/Shared/_Layout.cshtml
+++ b/source/repos/WebAppTestData/WebAppTestData/Views/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
                             <a class="nav-link" asp-area="" asp-controller="Role" asp-action="Create">Role</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-controller="Account" asp-action="Login">Account</a>
+                            <a class="nav-link account" asp-area="" asp-controller="Account" asp-action="Login">Account</a>
                         </li>
                     </ul>
                 </div>
@@ -42,7 +42,7 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
+    <footer class="border-top footer text-muted fixed-bottom">
         <div class="container">
             &copy; 2024 - WebAppTestData - <a class="link" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
