--- a/source/repos/WebAppTestData/WebAppTestData/Views/Role/Index.cshtml
+++ b/source/repos/WebAppTestData/WebAppTestData/Views/Role/Index.cshtml
@@ -1,13 +1,17 @@
-﻿@model IEnumerable<Role>
+﻿@* @model IEnumerable<Role> *@
+@* @{ *@
+@*     ViewData["Title"] = "Roles"; *@
+@* } *@
+
 @{
-    ViewData["Title"] = "Roles";
+ViewData["Title"] = "Roles";
 }
 
-<form asp-action="Index" method="get">
-    <input type="text" name="searchString" placeholder="Поиск по имени" />
-    <input type="submit" value="Поиск" />
-</form>
-
+@* <form asp-action="Index" method="get"> *@
+@*     <input type="text" name="searchString" placeholder="Поиск по имени" /> *@
+@*     <input type="submit" value="Поиск" /> *@
+@* </form> *@
+<!--
 <table>
     <tr>
         <th>Имя роли</th>
@@ -24,4 +28,7 @@
             </td>
         </tr>
     }
-</table>
+</table>-->
+
+<h1>22131321</h1>
+<div>asddfmaomvolmspvdspnvpsnm</div>
